# lynceus-warden

./: .gitignore  BACKLOG.md  CHANGELOG.md  INSTALL_WEBUI_SCOUT.md  LICENSE  Makefile  PHASE_2_DIAGNOSTIC.md  PRESHIP_DIAGNOSTIC.md  README.md  SECURITY.md  install.sh  pyproject.toml  uninstall.sh
.claude/commands/: run-chain.md
config/: allowlist.yaml  lynceus.dev.example.yaml  lynceus.example.yaml  rules.yaml  talos.dev.example.yaml  talos.example.yaml
deploy/: README.md  lynceus-ui.service  lynceus.env.example  lynceus.service  talos-ui.service  talos.env.example  talos.service
docs/: ARGUS_DEDUP_SHAPES.md  ARGUS_RESIDUALS.md  CONFIGURATION.md  DEPLOYMENT.md  KALI_SMOKE_CHECKLIST.md  NTFY_SETUP.md  PROJECT_STATUS.md  RULES.md  SMOKE.md  TESTING.md  WATCHFUL_SNOOZE_DESIGN.md  WINDOWS_DEV.md  runlog.md
migrations/: 002_poller_state.sql
scripts/: audit_residuals.py  rebump_dev_fixture.py
src/lynceus/: __init__.py  allowlist.py  config.py  db.py  evidence.py  kismet.py  main.py  notify.py  paths.py  patterns.py  poller.py  redact.py  rules.py
src/lynceus/cli/: _adapter_descriptors.py  bootstrap_kismet.py  export_config.py  import_argus.py  quickstart.py  seed_watchlist.py  setup.py  validate.py
src/lynceus/data/: NOTICE.md  __init__.py  default_watchlist.csv
src/lynceus/migrations/: 001_initial.sql  001_initial_down.sql  002_poller_state_down.sql  003_alert_actions.sql  003_alert_actions_down.sql  004_watchlist_metadata.sql  004_watchlist_metadata_down.sql  005_alert_watchlist_link.sql  005_alert_watchlist_link_down.sql  006_tier1_capture.sql  006_tier1_capture_down.sql  007_evidence_snapshots.sql  007_evidence_snapshots_down.sql  008_evidence_captured_at_index.sql  008_evidence_captured_at_index_down.sql  009_evidence_do_not_publish.sql  009_evidence_do_not_publish_down.sql  010_normalize_watchlist_patterns.sql  010_normalize_watchlist_patterns_down.sql  011_watchlist_mac_range.sql  011_watchlist_mac_range_down.sql  012_import_runs.sql  012_import_runs_down.sql  013_pattern_type_extension.sql  013_pattern_type_extension_down.sql  014_devices_remote_id.sql  014_devices_remote_id_down.sql  015_alerts_rule_type.sql  015_alerts_rule_type_down.sql  016_alerts_note.sql  016_alerts_note_down.sql  017_rule_type_snoozes.sql  017_rule_type_snoozes_down.sql  018_watchful_recurrence.sql  018_watchful_recurrence_down.sql  019_watchlist_ssid_pattern.sql  019_watchlist_ssid_pattern_down.sql  020_pattern_type_ble_local_name.sql  020_pattern_type_ble_local_name_down.sql  021_pattern_type_imei_tac.sql  (+2 more)
src/lynceus/seeds/: __init__.py  ble_service_names.py  threat_ouis.py
src/lynceus/setup/: __init__.py  core.py  models.py  prompts.py
src/lynceus/setup/web/: __init__.py  app.py  auth.py  review.py  server.py  session.py  sse_sink.py  steps_argus.py  steps_capture.py  steps_kismet.py  steps_severity_rules.py
src/lynceus/setup/web/templates/: _base.html  _progress.html  apply_complete.html  apply_placeholder.html  apply_progress.html  argus.html  ble_friendly_names.html  cancelled.html  (+16 more)
src/lynceus/webui/: __init__.py  app.py  csrf.py  pagination.py  server.py
src/lynceus/webui/static/: app.css  htmx.min.js  lynceus.css  lynceus.js
src/lynceus/webui/templates/: _alert_row.html  _device_actions.html  _sparkline.html  _table_macro.html  _topnav.html  _watchful_actions.html  alert_detail.html  alerts_list.html  allowlist_list.html  base.html  bulk_ack_result.html  device_detail.html  devices_list.html  error.html  healthz.html  index.html  not_found.html  probes_list.html  rules_list.html  settings.html  watchful_detail.html  watchful_list.html  watchlist_detail.html  watchlist_list.html
src/talos/: __init__.py  allowlist.py  config.py  db.py  kismet.py  main.py  notify.py  poller.py  rules.py
src/talos/cli/: seed_watchlist.py
src/talos/migrations/: __init__.py
src/talos/seeds/: __init__.py  ble_uuids.py
src/talos/webui/: __init__.py  app.py  csrf.py  server.py
src/talos/webui/static/: htmx.min.js  pico.min.css  talos.css  talos.js
src/talos/webui/templates/: _topnav.html  alert_detail.html  alerts_list.html  allowlist_list.html  base.html  bulk_ack_result.html  device_detail.html  devices_list.html  healthz.html  index.html  not_found.html  rules_list.html
systemd/: lynceus-refresh.service  lynceus-refresh.timer  lynceus-ui.service  lynceus.service
tests/: conftest.py  test_alert_linkage.py  test_allowlist.py  test_audit_residuals.py  test_bootstrap_kismet.py  test_bundled_watchlist.py  test_config.py  test_csrf.py  test_db.py  test_diag_csv.py  test_diag_filters.py  test_diag_import.py  test_diag_rollback.py  test_diag_rules.py  test_diag_watchful.py  test_evidence.py  test_export_config.py  test_healthz_json.py  test_import_argus.py  test_install_sh.py  test_integration.py  test_kismet.py  test_migration_rollback.py  test_notify.py  test_packaging.py  test_pagination.py  test_paths.py  test_patterns.py  test_poller.py  test_quickstart.py  test_redact.py  test_rules.py  test_seed_metadata.py  test_seed_watchlist.py  test_seeds.py  test_setup_wizard.py  test_severity_overrides.py  test_smoke.py  test_static_assets.py  test_tier1_capture.py  (+10 more)
tests/fixtures/: allowlist_example.yaml  dev_kismet.json  integration_allowlist.yaml  integration_kismet_t1.json  integration_kismet_t2.json  integration_rules.yaml  kismet_devices.json  rules_example.yaml
