[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talos"
version = "0.1.0"
description = "Personal RF security monitoring platform for Raspberry Pi."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Talos" }]
dependencies = [
    "requests>=2.32",
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "freezegun>=1.5",
    "ruff>=0.6",
    "build>=1.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["talos*"]

[tool.setuptools.package-data]
talos = ["migrations/*.sql"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: tests that build a wheel or do other slow setup",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
