[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lynceus"
version = "0.1.0"
description = "Personal RF security monitoring platform for Raspberry Pi."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Lynceus" }]
dependencies = [
    "requests>=2.32",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "freezegun>=1.5",
    "ruff>=0.6",
    "build>=1.2",
]

[project.scripts]
lynceus = "lynceus.poller:main"
lynceus-seed-watchlist = "lynceus.cli.seed_watchlist:main"
lynceus-ui = "lynceus.webui.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["lynceus*"]

[tool.setuptools.package-data]
lynceus = [
    "migrations/*.sql",
    "webui/templates/*.html",
    "webui/static/*",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: tests that build a wheel or do other slow setup",
    "webui: tests that exercise the FastAPI app",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Form"]
