[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lynceus"
version = "0.4.0rc1"
description = "Personal RF security monitoring platform for Raspberry Pi."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Kev Wilson", email = "kev@gurutechnology.services" },
]
keywords = [
    "security",
    "rf",
    "wifi",
    "bluetooth",
    "kismet",
    "raspberry-pi",
    "monitoring",
    "ntfy",
    "surveillance-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "requests>=2.32",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "freezegun>=1.5",
    "ruff>=0.6",
    "build>=1.2",
]

[project.scripts]
lynceus = "lynceus.poller:main"
lynceus-seed-watchlist = "lynceus.cli.seed_watchlist:main"
lynceus-import-argus = "lynceus.cli.import_argus:main"
lynceus-ui = "lynceus.webui.server:main"
lynceus-quickstart = "lynceus.cli.quickstart:main"
lynceus-setup = "lynceus.cli.setup:main"

[project.urls]
Homepage = "https://github.com/kevlattice/lynceus"
Repository = "https://github.com/kevlattice/lynceus"
Issues = "https://github.com/kevlattice/lynceus/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["lynceus*"]

[tool.setuptools.package-data]
lynceus = [
    "migrations/*.sql",
    "webui/templates/*.html",
    "webui/static/*",
]
"lynceus.data" = [
    "*.csv",
    "*.md",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: tests that build a wheel or do other slow setup",
    "webui: tests that exercise the FastAPI app",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Form"]
